Fix spacing in dynamic segments
[MAILPOET-3503]

--- a/assets/css/src/components-plugin/_dynamic-segments.scss
+++ b/assets/css/src/components-plugin/_dynamic-segments.scss
@@ -1,3 +1,3 @@
-.form-field-row-filters div {
+.form-field-row-filters > div {
   margin-bottom: 10px;
 }
